logs/atp_data05/create_tbl_train/2020-04-06T00:00:00+00:00/1.log
[2020-04-07 08:30:17,555] {taskinstance.py:655} INFO - Dependencies all met for <TaskInstance: atp_data05.create_tbl_train 2020-04-06T00:00:00+00:00 [queued]>
[2020-04-07 08:30:17,561] {taskinstance.py:655} INFO - Dependencies all met for <TaskInstance: atp_data05.create_tbl_train 2020-04-06T00:00:00+00:00 [queued]>
[2020-04-07 08:30:17,562] {taskinstance.py:866} INFO - 
--------------------------------------------------------------------------------
[2020-04-07 08:30:17,562] {taskinstance.py:867} INFO - Starting attempt 1 of 2
[2020-04-07 08:30:17,562] {taskinstance.py:868} INFO - 
--------------------------------------------------------------------------------
[2020-04-07 08:30:17,567] {taskinstance.py:887} INFO - Executing <Task(PythonOperator): create_tbl_train> on 2020-04-06T00:00:00+00:00
[2020-04-07 08:30:17,569] {standard_task_runner.py:53} INFO - Started process 50372 to run task
[2020-04-07 08:30:17,619] {logging_mixin.py:112} INFO - Running %s on host %s <TaskInstance: atp_data05.create_tbl_train 2020-04-06T00:00:00+00:00 [running]> 1.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.ip6.arpa
[2020-04-07 08:30:17,640] {taskinstance.py:1128} ERROR - syntax error at or near "1"
LINE 45:         1stFlrSF numeric, 
                 ^
Traceback (most recent call last):
  File "/Users/cchavez/opt/anaconda3/envs/airflow/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 966, in _run_raw_task
    result = task_copy.execute(context=context)
  File "/Users/cchavez/opt/anaconda3/envs/airflow/lib/python3.7/site-packages/airflow/operators/python_operator.py", line 113, in execute
    return_value = self.execute_callable()
  File "/Users/cchavez/opt/anaconda3/envs/airflow/lib/python3.7/site-packages/airflow/operators/python_operator.py", line 118, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/Users/cchavez/dev/airflow_home/dags/atp_data05.py", line 125, in create_tbl_train
    """)
psycopg2.errors.SyntaxError: syntax error at or near "1"
LINE 45:         1stFlrSF numeric, 
                 ^

[2020-04-07 08:30:17,643] {taskinstance.py:1151} INFO - Marking task as UP_FOR_RETRY
[2020-04-07 08:30:27,554] {logging_mixin.py:112} INFO - [2020-04-07 08:30:27,554] {local_task_job.py:103} INFO - Task exited with return code 1
